fix: remove overflow hidden style from body in complete profile CSS

--- a/auth/src/styles/complete_profile/index.css
+++ b/auth/src/styles/complete_profile/index.css
@@ -4,9 +4,7 @@
 @import "./assets/_categories.css";
 @import "./assets/_form.css";
 
-body{
-  overflow: hidden;
-}
+body{}
 .complete__profile__content {
   min-height: 100dvh;
   display: flex;
